[package]
name = "pgoutput-cmdline"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
postgres-protocol = "0.6"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
bytes = "1.7"
futures = "0.3"
once_cell = "1.19"
